@@ -1,8 +1,10 @@
-###
-# This is the default CSS Styles for the file_list standard template: EXT:file_list/Resources/Private/Templates/template_pi1.html
-##
-
 plugin.tx_filelist_pi1 {
+
+		# Icon skin (relative to site root or prefixed with an extension name, stdWrap-aware)
+	iconsPath = EXT:file_list/pi1/icons/
+
+	### Default CSS styles for the file_list standard template: EXT:file_list/Resources/Private/Templates/template_pi1.html
+
 	_CSS_DEFAULT_STYLE (
 /*
 .tx-filelist-pi1 {
