@@ -1,5 +1,6 @@
 2009-12-29  Xavier Perseguers  <typo3@perseguers.ch>
 
+	* Added TS configuration option for the icon directory
 	* Added feature #5853: Create Update wizard to move database configuration data into FlexForm
 
 2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>
